hphp/hack/test/typecheck/anonymous_shape3.php.exp
File "anonymous_shape3.php", line 8, characters 6-8:
This shape doesn't have a field `y` (Typing[4108])
  File "anonymous_shape3.php", line 7, characters 15-31:
  The shape is defined here
