hphp/hack/test/typecheck/anonymous_shape3.php
<?hh

/**
 * Anonymous shape parameter type hint
 */

function test(shape('x' => int) $s): void {
  $s['y'];
}
